--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -4,8 +4,14 @@
       <h1>Welcome to <i class="fas fa-book"></i><strong> Bookers</strong> !!
       </h1>
       <p>
-        In <i class="fas fa-book"></i><strong> Bookers</strong>,
+        In <i class="fas fa-book"></i><strong> Bookers</strong>,<br>
+        you can share and exchange your opinions, inpressions, and emotions <br>
+        about various books!
       </p>
+      <div class="row">
+        <%= link_to "Log in", new_user_session_path, class: "btn btn-info btn-lg btn-block" %>
+        <%= link_to "Sign up", new_user_registration_path, class: "btn btn-success btn-lg btn-block" %>
+      </div>
     </div>
   </div>
 </div>
