--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,11 +6,62 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <script src="https://kit.fontawesome.com/051eb814e7.js" crossorigin="anonymous"></script>
+
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
-    <%= yield %>
+  <body class="d-flex flex-column vh-100">
+    <header class="shadow-sm">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+       <div class="container">
+          <a class="navbar-brand" href="/"><span class="">Bookers</span></a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav ml-auto">
+              <% if user_signed_in? %>
+                <%= link_to user_path(current_user), class: "nav-link text-light" do %>
+                  <i class="fas fa-home"></i> Home
+                <% end %>
+                <%= link_to user_path, class: "nav-link text-light" do %>
+                  <i class="fas fa-users"></i> Users
+                <% end %>
+                <%= link_to books_path, class: "nav-link test-light" do %>
+                  <i class="fas fa-book-open"></i> Books
+                <% end %>
+                <% else %>
+                  <%= link_to root_path, class: "nav-link text-light" do %>
+                    <i class="fas fa-home"></i> Home
+                  <% end %>
+                  <%= link_to homes_about_path, class: "nav-link text-light" do %>
+                    <i class="fas fa-link"></i> About
+                  <% end %>
+                  <%= link_to new_user_registration_path, class: "nav-link text-light" do %>
+                    <i class="fas fa-user-plus"></i> Sign up
+                  <% end %>
+                  <%= link_to new_user_session_path, class: "nav-link text-light" do %>
+                    <i class="fas fa-sign-in-alt"></i> Log in
+                  <% end %>
+              <% end %>
+            </ul>
+          </div>
+       </div>
+      </nav>
+    </header>
+    <main class="mb-auto">
+      <%= yield %>
+    </main>
+    <footer class="">
+      <div class="container mt-5">
+        <div class="row">
+          <div class="mx-auto">
+            <p>&copy;CopyRight Infratop.inc</p>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
