--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
                 <%= link_to user_path(current_user), class: "nav-link text-light" do %>
                   <i class="fas fa-home"></i> Home
                 <% end %>
-                <%= link_to user_path, class: "nav-link text-light" do %>
+                <%= link_to users_path, class: "nav-link text-light" do %>
                   <i class="fas fa-users"></i> Users
                 <% end %>
                 <%= link_to books_path, class: "nav-link test-light" do %>
