--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -33,3 +33,4 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+<%# MEMO 最優先でログアウトができるようにする。→ 理由は、チェックシートのsign upページの編集という項目においてlog out後のルーティングが確認できない %>
