--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,6 +32,9 @@
                 <%= link_to books_path, class: "nav-link test-light" do %>
                   <i class="fas fa-book-open"></i> Books
                 <% end %>
+                <%= link_to destroy_user_session_path, method: :delete, class: "nav-link text-light" do %>
+                  <i class="fas fa-sign-out-alt"></i>Log out
+                <% end %>
                 <% else %>
                   <%= link_to root_path, class: "nav-link text-light" do %>
                     <i class="fas fa-home"></i> Home
