--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,65 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+<div class="container px-5 px-sm-0">
+  <div class="row">
+    <div class="col-md-3">
+      <h2>User info</h2>
+      <% if @user.profile_image.attached? %>
+        <%= image_tag @user.profile_image, size: "100x100" %>
+      <% else %>
+        <%= image_tag 'no_image', size: "100x100" %>
+      <% end %>
+      <table class="table">
+        <tbody>
+          <tr>
+            <th><h4>name</h4></th>
+            <th><p><%= @user.name %></p></th>
+          </tr>
+          <tr>
+            <th><h4>introduction</h4></th>
+            <th><p><%= @user.introduction %></p></th>
+          </tr>
+        </tbody>
+      </table>
+
+      <%= link_to edit_user_path(@user.id), class: "btn btn-out-line-secondary btn-block" do %>
+        <i class="fas fa-user-cog"></i>
+      <% end %>
+      
+      <%= form_with model: @book, local:true do |f| %>
+        <h4>Title</h4>
+        <%= f.text_field :title %> 
+        <h4>Opinion</h4>
+        <%= f.text_area :body %> 
+        <%= f.submit 'Create Book' %> 
+      <% end %>
+    </div>
+    <div class="col-md-8 offset-md-1">
+      <h2>Users</h2>
+      <table class="table">
+        <thead>
+          <tr>
+            <th>image</th>
+            <th>name</th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @users.each do |user| %>
+            <tr>
+              <th>
+                <td>
+                  <% if user.profile_image.attached? %>
+                    <%= image_tag user.profile_image, size: "100x100" %>
+                  <% else %>
+                    <%= image_tag 'no_image', size: "100x100" %>
+                  <% end %>
+                </td>
+                <td><%= user.name %></td>
+                <td><%= link_to "Show", user_path(user.id) %></td>
+              </th>
+            </tr> 
+          <% end %>
+        </<tbody>>
+      </table>
+    </div>
+  </div>
+</div>
