--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -24,12 +24,14 @@
         <i class="fas fa-user-cog"></i>
       <% end %>
       
+      <h2>New Book</h2>
       <%= form_with model: @book, local:true do |f| %>
         <h4>Title</h4>
-        <%= f.text_field :title %> 
+        <input class="form-control form-control-sm" type="text" rows="3"></input>
         <h4>Opinion</h4>
-        <%= f.text_area :body %> 
-        <%= f.submit 'Create Book' %> 
+        <textarea class="form-control" type="text"></textarea>
+
+        <button class="btn btn-success" type="button">Create Book</button>
       <% end %>
     </div>
     <div class="col-md-8 offset-md-1">
