[Update]: User information
Message body
Partial templating of user information

Message footer
Application2_Assignment

--- a/app/views/books/_user.html.erb
+++ b/app/views/books/_user.html.erb
@@ -1,5 +1,5 @@
 <h2>User info</h2>
-  <%= render 'users/attachment' %>
+  <%= render 'books/attachment' %>
 <table class="table">
   <tbody>
     <tr>
