--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,2 +1,7 @@
-<h1>Books#index</h1>
-<p>Find me in app/views/books/index.html.erb</p>
+<div class="container">
+  <div class="row">
+    <%# User info %>
+    <%# New Book %>
+    <%= render 'books/new', book: @book %>
+  </div>
+</div>
