--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,45 +1,11 @@
 <div class="container px-5 px-sm-0">
   <div class="row">
     <div class="col-md-3">
-<<<<<<< HEAD
-    <%# User info %>
-      <%= render 'users/user', user: @user, book: @book %>
-            
-=======
-      <h2>User info</h2>
-      <% if @user.profile_image.attached? %>
-        <%= image_tag @user.profile_image, size: "100x100" %>
-      <% else %>
-        <%= image_tag 'no_image', size: "100x100" %>
-      <% end %>
-      <table class="table">
-        <tbody>
-          <tr>
-            <th><h4>name</h4></th>
-            <th><p><%= @user.name %></p></th>
-          </tr>
-          <tr>
-            <th><h4>introduction</h4></th>
-            <th><p><%= @user.introduction %></p></th>
-          </tr>
-        </tbody>
-      </table>
-
-      <%= link_to edit_user_path(@user.id), class: "btn btn-out-line-secondary btn-block" do %>
-        <i class="fas fa-user-cog"></i>
-      <% end %>
-      
->>>>>>> 8736e3af9927125844a06e37ac0917a3629956e8
-      <h2>New Book</h2>
-      <%= form_with model: @book, local:true do |f| %>
-        <h4>Title</h4>
-        <input class="form-control form-control-sm" type="text" rows="3"></input>
-        <h4>Opinion</h4>
-        <textarea class="form-control" type="text"></textarea>
-
-        <button class="btn btn-success" type="button">Create Book</button>
-      <% end %>
-    </div>
+      <%# User info %>
+        <%= render 'users/user', user: @user, book: @book %>
+      <%# New Book %>
+        <%= render 'books/new', book: @book %>
+    </div>  
     <div class="col-md-8 offset-md-1">
       <h2>Users</h2>
       <table class="table">
@@ -55,11 +21,7 @@
             <tr>
               <th>
                 <td>
-                  <% if user.profile_image.attached? %>
-                    <%= image_tag user.profile_image, size: "100x100" %>
-                  <% else %>
-                    <%= image_tag 'no_image', size: "100x100" %>
-                  <% end %>
+                  <%= render 'users/attachment' %>
                 </td>
                 <td><%= user.name %></td>
                 <td><%= link_to "Show", user_path(user.id) %></td>
