--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,36 +1,11 @@
 <div class="container px-5 px-sm-0">
   <div class="row">
     <div class="col-md-3">
-      <h2>User info</h2>
-        <% if @user.profile_image.attached? %>
-          <%= image_tag @user.profile_image, size: "80x80" %>
-        <% else %>
-          <%= image_tag 'no_image', size: "80x80" %>
-        <% end %>
-      <table class="table">
-        <tbody>
-          <tr>
-            <th><h4>name</h4></th>
-            <th><p><%= @user.name %></p></th>
-          </tr>
-          <tr>
-            <th><h4>introduction</h4></th>
-            <th><p><%= @user.introduction %></p></th>
-          </tr>
-        </tbody>
-      </table>
-      <%= link_to edit_user_path(@user.id), class: "btn btn-outline-secondary btn-block" do %>
-        <i class="fas fa-user-cog"></i>
-      <% end %>
-      <h2 class="mt-3">New book</h2>
-        <%= form_with model: @book, local:true do |f| %>
-          <h4>Title</h4>
-            <%= f.text_field :title %> 
-          <h4>Opinion</h4>
-            <%= f.text_area :opinion %> 
-
-            <button class="btn btn-success" type="button">Create Book</button>
-        <% end %>
+      <%# Users info %>
+      <%= render 'users/user', user: @user %>
+      <%# New Book %>
+      <%= render 'books/new', book: @book %>
+      
     </div>
     <div class="col-md-8 offset-md-1">
       <h2>Books</h2>
@@ -47,11 +22,7 @@
             <tr>
               <td>
                 <%= link_to @user.profile_path(book.user_id) do %>
-                  <% if @user.profile_image.attached? %>
-                    <%= image_tag @user.profile_image, size:"80x80" %>
-                  <% else %>
-                    <%= image_tag 'no_image', size:"80x80" %>
-                  <% end %>
+                  <%= render 'users/attachment' %>
                 <% end %><br>
               </td>
               <td><%= link_to book.title, "/books/#{book.id}" %></td>
