--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,2 +1,40 @@
-<h1>Books#index</h1>
-<p>Find me in app/views/books/index.html.erb</p>
+<div class="container px-5 px-sm-0">
+  <div class="row">
+    <div class="col-md-3">
+      <%# User info %>
+      <%= render 'books/user' %>
+    </div>
+    <div class="mt-3">
+      <%# New Book %>
+      <%= render 'books/new', book: @book %>
+    </div>
+    <div class="col-md-8 offset-md-1">
+      <h2>Books</h2>
+        <table class="table table-hover table-inverse">
+          <thead>
+            <th></th>
+            <th>Title</th>
+            <th>Opinion</th>
+            <th colspan="3"></th>
+          </thead>
+          <tbody>
+            <% @books.each do |book| %>
+              <% user = User.find(book.user_id) %>
+              <tr>
+                <td>
+                  <%= link_to user_path(user.id) do %>
+                    <%= render 'books/attachment' %>
+                  <% end %>
+                </td>
+                <td>
+                  <%= link_to book_path(book.id) do %>
+                    <%= book.title %>
+                  <% end %>
+                </td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+    </div>
+  </div>
+</div>
