--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
                 <%= link_to users_path, class: "nav-link text-light" do %>
                   <i class="fas fa-users"></i> Users
                 <% end %>
-                <%= link_to books_path, class: "nav-link test-light" do %>
+                <%= link_to books_path, class: "nav-link text-light" do %>
                   <i class="fas fa-book-open"></i> Books
                 <% end %>
                 <%= link_to destroy_user_session_path, method: :delete, class: "nav-link text-light" do %>
