--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,14 +2,22 @@
   <div class="row">
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
       <h2>User info</h2>
-      <% form_with model: @user, local:true do |f| %>
-        <h4>Name</h4>
-          <%= f.text_field :name %> 
-        <h4>Image</h4>
-          <%= f.file_field :profile_image, accept:"image/*" %> 
-       <h4>Introduction</h4>
-          <%= f.text_area :introduction %> <br>
-          <%= f.submit 'Update User' %> 
+      <%= form_with model: @user, local:true do |f| %>
+        <div class="form-group">
+          <label>Name</label><br>
+           <%= f.text_field :name, class: "form-control name" %><br>
+        </div>
+        <div class="form-group">
+          <label>Image</label><br>
+           <%= f.file_field :profile_image, class: "form-control-sm" %><%= render 'users/attachment' %><br>
+        </div>
+        <div class="form-group">
+          <label>Introduction</label>
+           <%= f.text_area :introduction, class: "form-control introduction" %>
+        </div>
+        <div class="fotm-group">
+           <%= f.submit "Update User", class: "btn btn-secondary" %>
+        </div>
       <% end %>
     </div>
   </div>
