--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,19 +1,11 @@
 <div class="container px-5 px-sm-0">
   <div class="row">
     <div class="col-md-3">
-    <%# User info %>
-      <%= render 'users/user', user: @user, book: @book %>
-            
-      <h2>New Book</h2>
-      <%= form_with model: @book, local:true do |f| %>
-        <h4>Title</h4>
-        <input class="form-control form-control-sm" type="text" rows="3"></input>
-        <h4>Opinion</h4>
-        <textarea class="form-control" type="text"></textarea>
-
-        <button class="btn btn-success" type="button">Create Book</button>
-      <% end %>
-    </div>
+      <%# User info %>
+        <%= render 'users/user', user: @user, book: @book %>
+      <%# New Book %>
+        <%= render 'books/new', book: @book %>
+    </div>  
     <div class="col-md-8 offset-md-1">
       <h2>Users</h2>
       <table class="table">
@@ -29,11 +21,7 @@
             <tr>
               <th>
                 <td>
-                  <% if user.profile_image.attached? %>
-                    <%= image_tag user.profile_image, size: "100x100" %>
-                  <% else %>
-                    <%= image_tag 'no_image', size: "100x100" %>
-                  <% end %>
+                  <%= render 'users/attachment' %>
                 </td>
                 <td><%= user.name %></td>
                 <td><%= link_to "Show", user_path(user.id) %></td>
