[Edit]: A few adjustments
Message body
Adjustment the layout and what to do next.

Message footer
Application2_Assignment

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -3,6 +3,8 @@
     <div class="col-md-3">
       <%# User info %>
       <%= render 'books/user' %>
+    </div>
+    <div class="mt-3">
       <%# New Book %>
       <%= render 'books/new', book: @book %>
     </div>
