--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,3 +1,5 @@
+<%# WARNING(レイアウト崩れ) %>
+<%# TODO(原因を模索する) %>
 <div class="container px-5 px-sm-0">
   <div class="row">
     <div class="col-md-3">
@@ -31,9 +33,11 @@
                     <%= book.title %>
                   <% end %>
                 </td>
+                <td><%= book.body %></td>
               </tr>
             <% end %>
           </tbody>
         </table>
     </div>
+  </div>
 </div>
