--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,6 @@
       <%= render 'users/user', user: @user %>
       <%# New Book %>
       <%= render 'books/new', book: @book %>
-      
     </div>
     <div class="col-md-8 offset-md-1">
       <h2>Books</h2>
@@ -19,18 +18,22 @@
         </thead>
         <tbody>
           <% @books.each do |book| %>
-          <% user = User.find(book.user_id) %>
+            <% user = User.find(book.user_id) %>
             <tr>
               <td>
                 <%= link_to user_path(user.id) do %>
                   <%= render 'users/attachment' %>
                 <% end %><br>
               </td>
-              <td><%= link_to book.title, "/books/#{book.id}" %></td>
+              <td>
+                <%= link_to book_path(book.id) do %>
+                  <%= book.title %>
+                <% end %> 
+              </td>
               <td><%= book.body %></td>
             </tr>
           <% end %>
-        </<tbody>>
+        </tbody>
       </table>
     </div>
   </div>
