[Add]: Messages for error
Message body
Make sure that error messages are displayed.

Message footer
Application2_Assignment

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,6 +55,13 @@
       </nav>
     </header>
     <main class="mb-auto">
+      <% if flash[:notice] %>
+        <% flash.each do |key, msg| %>
+        <p id="notice"><%= msg %></p>
+        <% end %>
+      <% else %>
+        <p id="notice"></p>
+      <% end %>
       <%= yield %>
     </main>
     <footer class="">
