--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,2 +1,37 @@
-<h1>Books#edit</h1>
-<p>Find me in app/views/books/edit.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-2 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+      <h1>Editing Book</h1>
+      <div id="error_explanation">
+        <% if @book.errors.any? %>
+          <% if @book.errors.count == 1 %>
+           <h3><%= @book.errors.count %> error prohibited this obj from being saved:</h3>
+          <% else %>
+            <h3><%= @book.errors.count %> error prohibited this obj from being saved:</h3>
+          <% end %>
+          <ul>
+            <% @book.errors.full_message.each do |message| %>
+              <li class=""><%= message %></li> 
+            <% end %>
+          </ul>
+        <% end %>
+      </div>
+        <%= form_with model: @book, local:true do |f| %>
+          <div class="form-group">
+            <label for="inputTitle">Title</label><br>
+             <%= f.text_field :title, class:"form-control book_title" %><br>
+          </div>
+          <div class="form-group">
+            <label for="inputbody">Opinion</label><br>
+             <%= f.text_area :body, class:"form-control book_body" %><br>
+          </div>
+          <div class="form-group">
+             <%= f.submit "Update Book", class:"btn btn-seccess" %><br>
+          </div>
+        <% end %>
+        <%= link_to "Show", book_path(@book.id) %>
+        |
+        <%= link_to "Back", books_path %>
+    </div>
+  </div>
+</div>
