--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,6 +1,16 @@
 <%# WARNING(レイアウト崩れ) %>
 <%# TODO(原因を模索する) %>
 <div class="container px-5 px-sm-0">
+  <div id="error_explanation">
+    <% if @book.errors.any? %>
+      <h3><%= @book.errors.count %> errors prohibited this obj from being saved:</h3>
+      <ul>
+        <% @book.errors.full_messages.each do |message| %>
+          <li class=""><%= message %></li> 
+        <% end %>
+      </ul>
+    <% end %>
+  </div>
   <div class="row">
     <div class="col-md-3">
       <%# User info %>
