--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,6 +2,20 @@
   <div class="row">
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
       <h2>User info</h2>
+      <div id="error_explaantion">
+        <% if @user.errors.any? %>
+          <% if @user.errors.count == 1 %>
+            <h3><%= @user.errors.count %> error prohibited this obj from being saved:</h3>
+          <% else %>
+            <h3><%= @user.errors.count %> error prohibited this obj from being saved:</h3>
+          <% end %>
+          <ul>
+            <% @user.errors.full_messages.each do |message| %>
+              <li class=""><%= message %></li> 
+            <% end %>
+          </ul>
+        <% end %>
+      </div>
       <%= form_with model: @user, local:true do |f| %>
         <div class="form-group">
           <label>Name</label><br>
