--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,7 @@
                   <%= link_to root_path, class: "nav-link text-light" do %>
                     <i class="fas fa-home"></i> Home
                   <% end %>
-                  <%= link_to homes_about_path, class: "nav-link text-light" do %>
+                  <%= link_to home_about_path, class: "nav-link text-light" do %>
                     <i class="fas fa-link"></i> About
                   <% end %>
                   <%= link_to new_user_registration_path, class: "nav-link text-light" do %>
