--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
       <h2>User info</h2>
-      <div id="error_explaantion">
+      <div id="error_explantion">
         <% if @user.errors.any? %>
           <% if @user.errors.count == 1 %>
             <h3><%= @user.errors.count %> error prohibited this obj from being saved:</h3>
