[Edit]: Checking the files
Message body
Go through all the files.

Message footer
Application2_Assignment

--- a/app/views/books/_user.html.erb
+++ b/app/views/books/_user.html.erb
@@ -1,5 +1,5 @@
 <h2>User info</h2>
-  <%= render 'books/attachment' %>
+  <%= image_tag user.get_profile_image("63x63") %>
 <table class="table">
   <tbody>
     <tr>
@@ -13,7 +13,7 @@
   </tbody>
 </table>
 <div class="row">
-    <%= link_to edit_user_path(current_user), class: "btn btn-outline-secondary btn-block" method: :get do %>
+    <%= link_to edit_user_path(user), class: "btn btn-outline-secondary btn-block" do %>
         <i class="fas fa-user-cog"></i>
     <% end %>
 </div>
