--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,10 +1,11 @@
+NOTE(books_index Confirmed)
 <div class="container px-5 px-sm-0">
   <div id="error_explanation">
     <% if @book.errors.any? %>
       <h3><%= @book.errors.count %> errors prohibited this obj from being saved:</h3>
       <ul>
         <% @book.errors.full_messages.each do |message| %>
-          <li class=""><%= message %></li> 
+          <li><%= message %></li> 
         <% end %>
       </ul>
     <% end %>
@@ -12,11 +13,10 @@
   <div class="row">
     <div class="col-md-3">
       <%# User info %>
-      <%= render 'books/user' %>
-    </div>
-    <div class="mt-3">
+      <%= render 'users/user', user: current_user %>
+
       <%# New Book %>
-      <%= render 'books/new', book: @book %>
+      <%= render 'book', book: @book %>
     </div>
     <div class="col-md-8 offset-md-1">
       <h2>Books</h2>
@@ -29,11 +29,10 @@
           </thead>
           <tbody>
             <% @books.each do |book| %>
-              <% user = User.find(book.user_id) %>
               <tr>
                 <td>
-                  <%= link_to user_path(book.user) do %>
-                    <%= render 'books/attachment' %>
+                  <%= link_to user_path(book.user.id) do %>
+                    <%= image_tag book.user.get_profile_image("44x40") %>
                   <% end %>
                 </td>
                 <td>
