--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,5 +1,6 @@
+NOTE(users_template Confirmed)
 <h2>User info</h2>
-  <%= render 'users/attachment' %>
+  <%= image_tag user.get_profile_image("63x63") %>
 <table class="table">
   <tbody>
     <tr>
@@ -13,8 +14,8 @@
   </tbody>
 </table>
 <div class="row">
-    <%= link_to edit_user_path(@user.id), class: "btn btn-outline-secondary btn-block" do %>
-        <i class="fas.fa-user-cog"></i>
+    <%= link_to edit_user_path(user), class: "btn btn-outline-secondary btn-block" do %>
+        <i class="fas fa-user-cog"></i>
     <% end %>
 </div>
       
