--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,34 +1,47 @@
-WARNING(ここから確認の再開)
+NOTE(books_show Confirmed)
 <div class="container px-5 px-sm-0">
+  <div id="error_explanation">
+    <% if @book.errors.any? %>
+      <h3><%= @book.errors.count %> errors prohibited this obj from being saved:</h3>
+      <ul>
+        <% @book.errors.full_messages.each do |message| %>
+          <li class=""><%= message %></li> 
+        <% end %>
+      </ul>
+    <% end %>
+  </div>
   <div class="row">
     <div class="col-md-3">
       <%# User info %>
-      <%= render 'books/user' %>
-    </div>
-    <div class="mt-3">
+      <%= render 'users/user', user: @user %>
+
       <%# New Book %>
       <%= render 'books/new', book: @book %>
     </div>
     <div class="col-md-8 offset-md-1">
       <h2>Book detail</h2>
-      <table class="table table-hover table-inverse">
+      <table class="table">
         <tbody>
           <tr>
             <td>
-              <%= link_to user_path(@user.id) do %>
+              <%= link_to user_path(@user) do %>
+                <%= image_tag @user.get_profile_image("50x40") %><br>
                 <%= @user.name %>
               <% end %>
             </td>
             <td>
-              <%= link_to @book.title, book_path(@book) %>
+              <%= link_to book_path(@book) do %>
+                <%= @book.title %>
+              <% end %>
             </td>
             <td><%= @book.body %></td>
-            <% if @book.user_id == current_user.id %>
-              <td><%= link_to "Edit", edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
-              <td><%= link_to "Destroy", book_path(@book), method: :delete, data: {confirm: '本当に削除しますか?'}, class: "btn btn-sm btn-danger" %></td>
+            <% if @book.user == current_user %>
+              <td><%= link_to "Edit", edit_book_path(@book.id), class: "btn btn-sm btn-success" %></td>
+              <td><%= link_to "Destroy", book_path(@book.id), method: :delete, "data-confirm" => "本当に削除しますか?", class: "btn btn-sm btn-danger" %></td>
             <% end %>
           </tr>
         </tbody>
       </table>
     </div>
+  </div>
 </div>
