--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,10 +1,9 @@
-NOTE(books_index Confirmed)
 <div class="container px-5 px-sm-0">
   <div id="error_explanation">
-    <% if @book.errors.any? %>
-      <h3><%= @book.errors.count %> errors prohibited this obj from being saved:</h3>
+    <% if @new_book.errors.any? %>
+      <h3><%= @new_book.errors.count %> errors prohibited this obj from being saved:</h3>
       <ul>
-        <% @book.errors.full_messages.each do |message| %>
+        <% @new_book.errors.full_messages.each do |message| %>
           <li><%= message %></li> 
         <% end %>
       </ul>
@@ -13,10 +12,10 @@ NOTE(books_index Confirmed)
   <div class="row">
     <div class="col-md-3">
       <%# User info %>
-      <%= render 'users/user', user: current_user %>
+      <%= render 'users/info', user: @user %>
 
       <%# New Book %>
-      <%= render 'book', book: @book %>
+      <%= render 'book', new_book: @new_book %>
     </div>
     <div class="col-md-8 offset-md-1">
       <h2>Books</h2>
@@ -35,11 +34,7 @@ NOTE(books_index Confirmed)
                     <%= image_tag book.user.get_profile_image("50x40") %>
                   <% end %>
                 </td>
-                <td>
-                  <%= link_to book_path(book.id) do %>
-                    <%= book.title %>
-                  <% end %>
-                </td>
+                <td><%= link_to book.title, book_path(book.id) %></td>
                 <td><%= book.body %></td>
               </tr>
             <% end %>
