--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,47 +1,36 @@
-NOTE(books_show Confirmed)
-<div class="container px-5 px-sm-0">
-  <div id="error_explanation">
-    <% if @book.errors.any? %>
-      <h3><%= @book.errors.count %> errors prohibited this obj from being saved:</h3>
-      <ul>
-        <% @book.errors.full_messages.each do |message| %>
-          <li class=""><%= message %></li> 
-        <% end %>
-      </ul>
-    <% end %>
-  </div>
-  <div class="row">
-    <div class="col-md-3">
-      <%# User info %>
-      <%= render 'users/user', user: @user %>
+<div class="row mt-3">
+  <div class="col-md-3">
+    <%# User info %>
+    <%= render 'users/info', user: @user %>
 
-      <%# New Book %>
-      <%= render 'books/new', book: @book %>
-    </div>
-    <div class="col-md-8 offset-md-1">
-      <h2>Book detail</h2>
-      <table class="table">
-        <tbody>
-          <tr>
-            <td>
-              <%= link_to user_path(@user) do %>
-                <%= image_tag @user.get_profile_image("50x40") %><br>
-                <%= @user.name %>
-              <% end %>
-            </td>
-            <td>
-              <%= link_to book_path(@book) do %>
-                <%= @book.title %>
-              <% end %>
-            </td>
-            <td><%= @book.body %></td>
-            <% if @book.user == current_user %>
-              <td><%= link_to "Edit", edit_book_path(@book.id), class: "btn btn-sm btn-success" %></td>
-              <td><%= link_to "Destroy", book_path(@book.id), method: :delete, "data-confirm" => "本当に削除しますか?", class: "btn btn-sm btn-danger" %></td>
+    <%# New Book %>
+    <%= render 'book', book: @book %>
+  </div>
+  <div class="col-md-8 offset-md-1">
+    <h2>Book detail</h2>
+    <table class="table">
+      <tbody>
+        <tr>
+          <td>
+            <%= link_to user_path(@user.id) do %>
+              <%= image_tag @user.get_profile_image("50x50") %><br>
+              <%= @user.name %>
             <% end %>
-          </tr>
-        </tbody>
-      </table>
-    </div>
+          </td>
+          <td><%= link_to @book.title, book_path(@book) %></td>
+          <td><%= @book.body %></td>
+          <td>
+            <% if @book.user_id == current_user.id %>
+              <%= link_to "Edit", edit_book_path(@book.id), class: "btn btn-success" %>
+            <% end %>
+          </td>
+          <td>
+            <% if @book.user_id == current_user.id %>
+              <%= link_to "Destroy", book_path(@book.id), method: :delete, data: { confirm: '本当に削除しますか?'},class: "btn btn-danger" %>
+            <% end %>
+          </td>
+        </tr>
+      </tbody>
+    </table>
   </div>
 </div>
