--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,39 +1,34 @@
-TODO(ここから確認作業を再開する)
 <div class="container">
   <div class="row">
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
       <h2>User info</h2>
-      <div id="error_explantion">
-        <% if @user.errors.any? %>
-          <% if @user.errors.count == 1 %>
-            <h3><%= @user.errors.count %> error prohibited this obj from being saved:</h3>
-          <% else %>
-            <h3><%= @user.errors.count %> error prohibited this obj from being saved:</h3>
+        <div id="error_explanation">
+          <% if @user.errors.any? %>
+            <h3><%= @user.errors.count %> errors prohibited this obj from being saved:</h3>
+            <ul>
+              <% @user.errors.full_messages.each do |message| %>
+                <li class=""><%= message %></li> 
+              <% end %>
+            </ul>
           <% end %>
-          <ul>
-            <% @user.errors.full_messages.each do |message| %>
-              <li class=""><%= message %></li> 
-            <% end %>
-          </ul>
+        </div>
+        <%= form_with model: @user, local:true do |f| %>
+          <div class="form-group">
+            <%= f.label :Name %>
+            <%= f.text_field :name, class: "form-control name" %><br>
+          </div>
+          <div class="form-group">
+            <%= f.label :Image %>
+            <%= f.file_field :profile_image, class: "form-control-sm" %><%= render 'users/attachment' %><br>
+          </div>
+          <div class="form-group">
+            <%= f.label :Introduction %>
+            <%= f.text_area :introduction, class: "form-control introduction" %>
+          </div>
+          <div class="actions">
+            <%= f.submit 'Update User', class: "btn btn-secondary" %>
+          </div>
         <% end %>
-      </div>
-      <%= form_with model: @user, local:true do |f| %>
-        <div class="form-group">
-          <label>Name</label><br>
-           <%= f.text_field :name, class: "form-control name" %><br>
-        </div>
-        <div class="form-group">
-          <label>Image</label><br>
-           <%= f.file_field :profile_image, class: "form-control-sm" %><%= render 'users/attachment' %><br>
-        </div>
-        <div class="form-group">
-          <label>Introduction</label>
-           <%= f.text_area :introduction, class: "form-control introduction" %>
-        </div>
-        <div class="fotm-group">
-           <%= f.submit "Update User", class: "btn btn-secondary" %>
-        </div>
-      <% end %>
     </div>
   </div>
 </div>
