--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,13 +2,13 @@
   <div class="row">
     <div class="col-md-3">
       <%# User info %>
-        <%= render 'users/user', user: @user, book: @book %>
+        <%= render 'info', user: current_user %>
       <%# New Book %>
-        <%= render 'books/new', book: @book %>
+        <%= render 'books/book', new_book: @new_book %>
     </div>  
     <div class="col-md-8 offset-md-1">
       <h2>Users</h2>
-      <table class="table">
+      <table class="table table-striped">
         <thead>
           <tr>
             <th>image</th>
@@ -19,13 +19,11 @@
         <tbody>
           <% @users.each do |user| %>
             <tr>
-              <th>
                 <td>
-                  <%= render 'users/attachment' %>
+                  <%= image_tag user.get_profile_image("50x40") %>
                 </td>
                 <td><%= user.name %></td>
                 <td><%= link_to "Show", user_path(user.id) %></td>
-              </th>
             </tr> 
           <% end %>
         </<tbody>>
