--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,16 +1,17 @@
-<div class="container px-5 px-sm-0">
+<div class="container px-5 px-sm-0 mt-4">
   <div class="row">
     <div class="col-md-3">
       <%# Users info %>
-      <%= render 'users/user', user: @user %>
+      <%= render 'info', user: @user %>
       <%# New Book %>
-      <%= render 'books/new', book: @book %>
+      <%= render 'books/book', book: @book %>
     </div>
     <div class="col-md-8 offset-md-1">
       <h2>Books</h2>
-      <table class="table table-hover table-inverse">
+      <table class="table table-hover">
         <thead>
           <tr>
+            <th></th>
             <th>Title</th>
             <th>Opinion</th>
             <th colspan=3></th>
@@ -18,20 +19,19 @@
         </thead>
         <tbody>
           <% @books.each do |book| %>
-            <% user = User.find(book.user_id) %>
-            <tr>
-              <td>
-                <%= link_to user_path(user.id) do %>
-                  <%= render 'users/attachment' %>
-                <% end %><br>
-              </td>
-              <td>
-                <%= link_to book_path(book.id) do %>
-                  <%= book.title %>
-                <% end %> 
-              </td>
-              <td><%= book.body %></td>
-            </tr>
+            <td>
+              <%= link_to user_path(book.user.id) do %>
+                <%= image_tag book.user.get_profile_image("50x40") %>
+              <% end %>
+            </td>
+            <td>
+              <%= link_to book_path(book.id) do %>
+                <%= book.title %>
+              <% end %>
+            </td>
+            <td>
+              <%= book.body %>
+            </td>
           <% end %>
         </tbody>
       </table>
